force-app/main/default/objects/cpm__Page_Element__c/cpm__Page_Element__c.object-meta.xml
<CustomObject>
    <label>Page Element</label>
    <nameField>
        <displayFormat>PE-{0}</displayFormat>
        <label>Page Element Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Page Elements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>