force-app/main/default/objects/cpm__Page_Element__c/fields/cpm__Configuration__c.field-meta.xml
<CustomField>
    <fullName>cpm__Configuration__c</fullName>
    <label>Configuration</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>