force-app/main/default/objects/cpm__Page_Element__c/fields/cpm__Domain_ID__c.field-meta.xml
<CustomField>
    <fullName>cpm__Domain_ID__c</fullName>
    <label>Domain ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>