force-app/main/default/objects/cpm__Page_Element__c/fields/cpm__Is_Default__c.field-meta.xml
<CustomField>
    <fullName>cpm__Is_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>