force-app/main/default/objects/cpm__Page_Element__c/fields/cpm__Order__c.field-meta.xml
<CustomField>
    <fullName>cpm__Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>