force-app/main/default/objects/cpm__Page_Element__c/fields/cpm__Page_Content_Type__c.field-meta.xml
<CustomField>
    <fullName>cpm__Page_Content_Type__c</fullName>
    <label>Page Content Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Image</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Payment Form</fullName>
            </value>
            <value>
                <fullName>Title</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>