force-app/main/default/objects/cpm__Page_Element__c/fields/cpm__Page_Element_Id__c.field-meta.xml
<CustomField>
    <fullName>cpm__Page_Element_Id__c</fullName>
    <label>Page Element Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>