force-app/main/default/objects/cpm__Page_Element__c/fields/cpm__Page_External_Id__c.field-meta.xml
<CustomField>
    <fullName>cpm__Page_External_Id__c</fullName>
    <label>Page External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>