force-app/main/default/objects/cpm__Page_Element__c/fields/cpm__Page_Name__c.field-meta.xml
<CustomField>
    <fullName>cpm__Page_Name__c</fullName>
    <label>Page Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>