force-app/main/default/objects/cpm__Page_Element__c/fields/cpm__Parent_Page_Element__c.field-meta.xml
<CustomField>
    <fullName>cpm__Parent_Page_Element__c</fullName>
    <label>Parent Page Element</label>
    <length>50</length>
    <type>Text</type>
</CustomField>