force-app/main/default/objects/cpm__Page_Element__c/fields/cpm__Published__c.field-meta.xml
<CustomField>
    <fullName>cpm__Published__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Published</label>
    <type>Checkbox</type>
</CustomField>